<resources>
    <string name="app_name">BookClub</string>
    <string name="book_cover">Book cover</string>
    <string name="book_title_example">Book title</string>
    <string name="book_author_example">Author</string>
    <string name="book_year_example">2023</string>
    <string name="books_loading_error">Error loading data. Please try again later.</string>
    <string name="book_desc_example">Full book description</string>
    <string name="repeat">Retry</string>
    <string name="searching_books">Searching books</string>
    <string name="from_api">Loaded from API</string>
    <string name="from_cache">Loaded from cache</string>
    <string name="loaded_from_api">Loaded from API</string>
    <string name="loaded_from_cache">Loaded from cache</string>

    <string name="welcome_back">Welcome back!</string>
    <string name="login_desc">Log in to your account to start reading books.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="arrow">Arrow</string>
    <string name="terms_of_use_text">By continuing, you agree to our Terms of Use and Privacy Policy.</string>
    <string name="toggle_password_visibility">Toggle password visibility</string>
    <string name="don_t_have_an_account">"Don\'t have an account? "</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign in</string>
    <string name="name">Name</string>
    <string name="cannot_navigate_to_book_details">Cannot navigate to book details</string>
    <string name="session_is_expired">Your session is expired. Please sign in again</string>
    <string name="notifications_is_disabled">Notifications is disabled</string>
    <string name="already_have_an_account">"Already have an account? "</string>
    <string name="book_details">Book Details</string>
    <string name="create_new_account">Create new account</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="finished">Finished</string>
    <string name="reading">Reading</string>
    <string name="planned">Planned</string>
    <string name="main">Main</string>
    <string name="my_library">My Library</string>
    <string name="profile">Profile</string>
    <string name="coming_soon">Coming soon</string>
    <string name="no_books_found">No books found</string>
</resources>