<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.librarylist.LibraryListFragment">

    <HorizontalScrollView
        android:id="@+id/filter_scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_alignParentTop="true"
        android:scrollbars="none">

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/statusToggleGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:singleSelection="true"
            app:selectionRequired="false">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/status_planned"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/planned"
                android:checkable="true"
                android:paddingHorizontal="48dp"
                android:backgroundTint="@color/design_default_color_secondary"
                android:textColor="@color/white"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/status_reading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reading"
                android:checkable="true"
                android:paddingHorizontal="48dp"
                android:layout_marginEnd="4dp"
                android:backgroundTint="@color/design_default_color_primary"
                android:textColor="@color/white"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/status_finished"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/finished"
                android:checkable="true"
                android:paddingHorizontal="48dp"
                android:backgroundTint="@color/yellow"
                android:textColor="@color/white"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>
        </com.google.android.material.button.MaterialButtonToggleGroup>
    </HorizontalScrollView>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/filter_scroll">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_books"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:clipToPadding="false" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <TextView
        android:id="@+id/tvEmptyList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_books_found"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <FrameLayout
        android:id="@+id/loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:background="@color/design_default_color_background">

        <ProgressBar
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/design_default_color_primary" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/error"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:background="@color/design_default_color_background">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/books_loading_error"
            android:textSize="18sp"
            android:padding="16dp" />
    </FrameLayout>

</RelativeLayout>
